# fs-prs

./: .build.yml  Cargo.toml  README.dj  design.nu  toolkit.nu
doc/: algorith.dj  fuss.dj
lib/dodo/: Cargo.toml
lib/dodo/src/: buffer.rs  construct.rs  lib.rs
lib/fuss/: Cargo.toml
lib/fuss/src/: error.rs  lib.rs  object.rs  utils.rs
lib/fuss/src/object/: mode.rs
src/: cli.rs  command.rs  main.rs
