[package]
name = "fs"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Andrej Kolchin <kaathewise@protonmail.com>"]

[workspace]
members = ["lib/fuss", "lib/dodo"]

[dependencies]
clap = "4.4.17"
fuss = { path = "./lib/fuss", version = "*" }
camino = "1.1.6"
uuid = { version = "1.6.1", features = ["v7"] }
